--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=prod node app.js",
+    "start": "cross-env NODE_ENV=prod pm2 start app.js",
     "dev": "cross-env NODE_ENV=development node app.js"
   },
   "keywords": [],
